data/all_generated_tests/raw_wast_tests/br_table_UnreachableCodeExecution_2126.wast
;; 6. **Unreachable as a Valid Branch Target**:    - Description: Test using a `br_table` where one of the valid label indices directly points to an `unreachable` instruction.    - Constraint: Ensures labels remain accessible only if defined properly and verify if targeting an `unreachable` label operates without improper stack conditions.    - Relation: Tests if invalid label indexing allows flows reaching `unreachable` code unexpectedly.

(assert_invalid
  (module
    (func $test_unreachable_as_target
      (block $label1
        (block $label2
          (br_table $label1 $label2 (i32.const 1)) 
          (unreachable)
        )
      )
    )
  )
  "unknown label"
)